--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas2.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas2.jrxml
@@ -19,9 +19,12 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT  DATE_FORMAT(m.fechasalidamision, '%d/%m/%Y') as Desde, DATE_FORMAT(m.fecharegresomision, '%d/%m/%Y') as Hasta, m.gastoviaje,m.numeroacuerdo,m.boleto,m.viaticos ,m.organismopatrocinador,m.organismoinvita from mision m inner join empleadomision em on m.codigomision=em.codigomision inner join empleado e on e.codigoempleado=em.codigoempleado inner join empleadomision ep on m.codigomision=ep.codigomision inner join puesto p on p.codigopuesto=e.codigopuesto
-where e.estadoempleado in(1,3) and m.estadomision=1 and p.estadopuesto!=0 and tipomision =1 and m.fechasalidamision>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')and m.fechasalidamision<=STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y') ]]>
+		<![CDATA[SELECT e.codigoempleado,DATE_FORMAT(m.fechasalidamision, '%d/%m/%Y') as Desde, DATE_FORMAT(m.fecharegresomision, '%d/%m/%Y') as Hasta, m.gastoviaje,m.numeroacuerdo,m.boleto,m.viaticos ,m.organismopatrocinador,m.organismoinvita from mision m inner join empleadomision em on m.codigomision=em.codigomision inner join empleado e on e.codigoempleado=em.codigoempleado inner join empleadomision ep on m.codigomision=ep.codigomision inner join puesto p on p.codigopuesto=e.codigopuesto
+where e.estadoempleado in(1,3) and m.estadomision=1 and p.estadopuesto!=0 and tipomision =1 and m.fechasalidamision>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')and m.fechasalidamision<=STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	</queryString>
+	<field name="codigoempleado" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
 	<field name="Desde" class="java.lang.String"/>
 	<field name="Hasta" class="java.lang.String"/>
 	<field name="gastoviaje" class="java.lang.Float">
@@ -173,47 +176,47 @@ where e.estadoempleado in(1,3) and m.estadomision=1 and p.estadopuesto!=0 and ti
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="19" splitType="Stretch">
+		<band height="20" splitType="Stretch">
 			<rectangle>
-				<reportElement x="57" y="2" width="663" height="15" uuid="e0d1f52c-0caf-4650-aa00-8b3c0f4bca9f"/>
+				<reportElement x="1" y="2" width="719" height="15" uuid="e0d1f52c-0caf-4650-aa00-8b3c0f4bca9f"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="58" y="2" width="67" height="14" uuid="daf65d49-8d84-4aca-8fe1-97e5a9fb7140"/>
+				<reportElement x="102" y="2" width="67" height="14" uuid="daf65d49-8d84-4aca-8fe1-97e5a9fb7140"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Inicio Misión]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="135" y="3" width="65" height="14" uuid="f214cfb5-ccad-4158-8387-3d2e94b2de4f"/>
+				<reportElement x="179" y="3" width="65" height="14" uuid="f214cfb5-ccad-4158-8387-3d2e94b2de4f"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fin Misión]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="212" y="2" width="86" height="14" uuid="56e0ea94-aa33-4b1b-a28a-fb1bee4c9284"/>
+				<reportElement x="256" y="2" width="86" height="14" uuid="56e0ea94-aa33-4b1b-a28a-fb1bee4c9284"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Gasto($)]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="311" y="2" width="60" height="14" uuid="544233b5-c405-4b1a-9bbe-0a7b06bda63f"/>
+				<reportElement x="355" y="2" width="60" height="14" uuid="544233b5-c405-4b1a-9bbe-0a7b06bda63f"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Acuerdo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="376" y="2" width="74" height="14" uuid="cc0f0862-0b00-401c-8751-053a34bfc7c5"/>
+				<reportElement x="420" y="2" width="74" height="14" uuid="cc0f0862-0b00-401c-8751-053a34bfc7c5"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Boleto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="455" y="2" width="100" height="14" uuid="cadd1413-9292-4f0e-b937-cc285eb09ef0"/>
+				<reportElement x="499" y="2" width="100" height="14" uuid="cadd1413-9292-4f0e-b937-cc285eb09ef0"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -227,73 +230,90 @@ where e.estadoempleado in(1,3) and m.estadomision=1 and p.estadopuesto!=0 and ti
 				<text><![CDATA[Organismo que Invita]]></text>
 			</staticText>
 			<line>
-				<reportElement x="134" y="2" width="1" height="14" uuid="c8f6945f-cecf-4e46-9c7a-9487985c2f6b"/>
+				<reportElement x="178" y="2" width="1" height="14" uuid="c8f6945f-cecf-4e46-9c7a-9487985c2f6b"/>
 			</line>
 			<line>
-				<reportElement x="209" y="3" width="1" height="14" uuid="e710308f-165e-419b-a49b-c982603438eb"/>
+				<reportElement x="253" y="3" width="1" height="14" uuid="e710308f-165e-419b-a49b-c982603438eb"/>
 			</line>
 			<line>
-				<reportElement x="298" y="2" width="1" height="14" uuid="c9e1519e-1911-4114-ac4c-56c45609ca19"/>
+				<reportElement x="342" y="2" width="1" height="14" uuid="c9e1519e-1911-4114-ac4c-56c45609ca19"/>
 			</line>
 			<line>
-				<reportElement x="374" y="2" width="1" height="14" uuid="e9c5b065-7ad8-4859-bfc6-0d71bc5d77ed"/>
+				<reportElement x="418" y="2" width="1" height="14" uuid="e9c5b065-7ad8-4859-bfc6-0d71bc5d77ed"/>
 			</line>
 			<line>
-				<reportElement x="451" y="2" width="1" height="14" uuid="874e3df6-0736-4283-9d3c-9a2374f810ff"/>
+				<reportElement x="495" y="2" width="1" height="14" uuid="874e3df6-0736-4283-9d3c-9a2374f810ff"/>
 			</line>
 			<line>
 				<reportElement x="604" y="3" width="1" height="14" uuid="8c247b14-213b-4152-9c35-5d89a3e6e49d"/>
 			</line>
+			<line>
+				<reportElement x="101" y="2" width="1" height="14" uuid="fdeee6fb-84aa-4212-a32a-d8215b76e4de"/>
+			</line>
+			<staticText>
+				<reportElement x="1" y="6" width="100" height="14" uuid="e16d01bb-fdae-4c78-84dc-32fc381df798"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Codigo Empleado]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="14" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="333" y="0" width="39" height="14" uuid="df87ecc2-2131-46fa-87a6-4ddd11dd4653"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="377" y="0" width="39" height="14" uuid="df87ecc2-2131-46fa-87a6-4ddd11dd4653"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{numeroacuerdo}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="405" y="0" width="45" height="14" uuid="7f821bb7-e11a-4f25-a7ee-0f6f523812fb"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="449" y="0" width="45" height="14" uuid="7f821bb7-e11a-4f25-a7ee-0f6f523812fb"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{boleto}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="605" y="0" width="115" height="14" uuid="331ffb0f-7fdd-45f9-820a-f3e4a7f354a2"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="611" y="0" width="100" height="14" uuid="331ffb0f-7fdd-45f9-820a-f3e4a7f354a2"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{organismoinvita}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="58" y="0" width="60" height="14" uuid="2b866d77-3fb7-4570-91d5-950ebc6ba5d4"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="102" y="0" width="60" height="14" uuid="2b866d77-3fb7-4570-91d5-950ebc6ba5d4"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Desde}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="135" y="0" width="61" height="14" uuid="f7367943-23df-4a2e-a746-e7d7176c9c8a"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="179" y="0" width="61" height="14" uuid="f7367943-23df-4a2e-a746-e7d7176c9c8a"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Hasta}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="244" y="0" width="54" height="14" uuid="2236456c-c864-4921-8286-d9f535d54d1a"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="288" y="0" width="54" height="14" uuid="2236456c-c864-4921-8286-d9f535d54d1a"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[new DecimalFormat("###,###,##0.00").format($F{gastoviaje})]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="457" y="0" width="147" height="14" uuid="c3bb2880-969f-43b1-a0aa-c17e81e91743"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="501" y="0" width="98" height="14" uuid="c3bb2880-969f-43b1-a0aa-c17e81e91743"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{organismopatrocinador}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="0" width="100" height="14" uuid="0c791bd6-a988-4783-9d8c-69fc2218a906"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{codigoempleado}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -301,20 +321,27 @@ where e.estadoempleado in(1,3) and m.estadomision=1 and p.estadopuesto!=0 and ti
 		<band height="2" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="4" splitType="Stretch"/>
+		<band height="7" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
 		<band height="70" splitType="Stretch">
 			<line>
-				<reportElement x="57" y="2" width="663" height="1" uuid="7f6b219c-d6c8-4d1a-baa5-521dd4b482db"/>
+				<reportElement x="1" y="2" width="719" height="1" uuid="7f6b219c-d6c8-4d1a-baa5-521dd4b482db"/>
 			</line>
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="166" y="6" width="107" height="13" backcolor="#FFFFFF" uuid="f510e194-2ca5-4577-8f74-b422bc3704ff"/>
+				<reportElement mode="Opaque" x="166" y="6" width="135" height="13" backcolor="#FFFFFF" uuid="f510e194-2ca5-4577-8f74-b422bc3704ff"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Gasatos Totales:$" + 
 new BigDecimal($V{gastoviaje_1}).setScale(2, BigDecimal.ROUND_CEILING)]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" pattern="###0">
+				<reportElement mode="Opaque" x="579" y="6" width="127" height="15" backcolor="#FFFFFF" uuid="066fe206-02a4-44d9-a443-8d7356df303c"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9" isUnderline="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Total de Registros:    " + $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
