--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -42,17 +42,29 @@
             <h2 class="h2mod">Ingrese Usuario y Contraseña:</h2>
             <div class="inset">
 
+<!--                <div th:if="${#request.getParameter('error') == 'true'}"
+                     style="font-size: 26px;
+                            letter-spacing: 0px;
+                            word-spacing: 0px;
+                            color: #EBEBFF;
+                            font-weight: 400;
+                            text-decoration: none;
+                            font-style: normal;
+                            font-variant: normal;
+                            text-transform: none;">-->
                 <div th:if="${#request.getParameter('error') == 'true'}"
-                     style="color:red;margin:10px 0px;">
+                     class="bad">
                     ACCESO NO PERMITIDO!!!<br />
                     Razon :
                     <span th:if="${#session!= null and #session.getAttribute('SPRING_SECURITY_LAST_EXCEPTION') != null}"
                           th:utext="${#session.getAttribute('SPRING_SECURITY_LAST_EXCEPTION').message}">
-                        Static summary
+                        Static summary 
                     </span>
 
+                
                 </div>
-                <div class="form-group" align="center">
+<br>                
+<div class="form-group" align="center">
                     <label for="username" class="col-sm-2 control-label">USUARIO</label>
 
                     <div class="col-sm-9">
