--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -85,7 +85,7 @@ and open the template in the editor.
 			float: none;
 			width: auto;
 			margin-top: 0;
-			background-color: transparent;
+			background-color: #ffffff;
 			border: 0;
 			-webkit-box-shadow: none;
 			box-shadow: none;
@@ -98,7 +98,7 @@ and open the template in the editor.
 
 		/*colors dropdown box text */
 		.navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
-			color: #000000;
+			color: #585858;
                         text-shadow: 0px 0px 15px white;
 		}
 
@@ -149,8 +149,8 @@ and open the template in the editor.
 	}
 
 	nav.sidebar .navbar-nav .open .dropdown-menu>li>a:hover, nav.sidebar .navbar-nav .open .dropdown-menu>li>a:focus {
-		color: #CCC;
-		background-color: transparent;
+		color: #585858;
+		background-color: #CCC;
 	}
 
 	nav:hover .forAnimate{
