--- a/src/main/resources/templates/fragments/usuario/usuarioshow.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioshow.html
@@ -38,12 +38,12 @@
                         <p class="form-control-static" th:text="${usuario.nombrecompleto}">Nombre</p>
                     </div>
                 </div>
-                <div class="form-group">
+<!--                <div class="form-group">
                     <label class="col-sm-4 control-label">Contraseña:</label>
                     <div class="col-sm-8">
                         <p class="form-control-static" th:text="${usuario.contraseniausuario}">contraseña</p>
                     </div>
-                </div>
+                </div>-->
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Roles asignados a usuario:</label>
                     <div class="col-sm-8">
