etiqueta de usuario y descuentos

--- a/src/main/resources/templates/fragments/descuento/descuentos.html
+++ b/src/main/resources/templates/fragments/descuento/descuentos.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
      <th:block th:include="../templates/header"></th:block>
-    <title>Listado de descuentos</title>
+    <title>Listado de descuentos de empleado</title>
 </head>
 <body>
     <script> Textheader('pnt_desc',document.title);</script>
