--- a/src/main/resources/templates/fragments/descuento/descuentoshow.html
+++ b/src/main/resources/templates/fragments/descuento/descuentoshow.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>Detalle de Descuento </title>
+        <title>Detalle de Descuento de empleado </title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
