--- a/src/main/resources/templates/passform.html
+++ b/src/main/resources/templates/passform.html
@@ -86,7 +86,7 @@
                         
                         <div class="form-group">
                             <label class="col-sm-3 control-label"></label>
-                            <label class="col-sm-2 control-label">Contraseña de Usuario:</label>
+                            <label class="col-sm-2 control-label">Introdusca su Nueva Contraseña:</label>
                             <div class="col-sm-6">
                                 <input type="password" class="form-control" required="true" id = "pass" size="100" maxlength="50" th:field="*{contraseniausuario}"/>
                             </div>
@@ -97,7 +97,7 @@
                         </div>
                         <div class="form-group">
                             <label class="col-sm-3 control-label"></label>
-                            <label class="col-sm-2 control-label">Confirmacion de Contraseña:</label>
+                            <label class="col-sm-2 control-label">Confirmacion de Nueva Contraseña:</label>
                             <div class="col-sm-6">
                                 <input type="password" id="confpass" class="form-control " required="true" size="11" maxlength="11" th:field="*{controlcontrasenia}"/>
                             </div>
