areglo de rayya y neomonico de rpt usr

--- a/src/main/resources/templates/fragments/otherreports/usuarioreport.html
+++ b/src/main/resources/templates/fragments/otherreports/usuarioreport.html
@@ -5,7 +5,7 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-    <script> Textheader('pnt_reporte_abog1', document.title);</script>
+    <script> Textheader('pnt_reporte_usr', document.title);</script>
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
