--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_usuarios.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_usuarios.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="10" uuid="59bc4ce1-3b42-49cf-9224-91ada3447f2e">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="129"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="IMAGE_PATH" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
@@ -223,23 +223,38 @@
 	<detail>
 		<band height="24" splitType="Stretch">
 			<textField>
-				<reportElement x="172" y="4" width="184" height="12" uuid="ca4bc228-5dbf-4dd3-b9d7-343ffee59625"/>
+				<reportElement x="120" y="2" width="184" height="12" uuid="ca4bc228-5dbf-4dd3-b9d7-343ffee59625"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrecompleto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="489" y="2" width="98" height="14" uuid="041767d2-a670-4236-bd5f-e4288adf5786"/>
+				<reportElement x="309" y="0" width="98" height="14" uuid="041767d2-a670-4236-bd5f-e4288adf5786"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{nombreusuario}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="640" y="2" width="70" height="12" uuid="93008586-b497-43ed-a27f-5a3b9dcc0bab"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{Fecha Ingreso}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="216" y="2" width="123" height="12" uuid="076ff7f3-ba7a-472f-bdc0-8818bd844672"/>
+				<reportElement x="493" y="2" width="123" height="12" uuid="076ff7f3-ba7a-472f-bdc0-8818bd844672"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrerol}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="420" y="10" width="73" height="12" uuid="c14aaf61-b16f-4878-ad88-bc72d3dc7916"/>
+				<reportElement x="418" y="1" width="73" height="12" uuid="c14aaf61-b16f-4878-ad88-bc72d3dc7916"/>
+				<textElement>
+					<font fontName="Times New Roman"/>
+				</textElement>
 				<textFieldExpression><![CDATA[($F{estadousuario}==0)?"INACTIVO":"ACTIVO";]]></textFieldExpression>
 			</textField>
 		</band>
